Fix select styling on safari.

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -84,6 +84,12 @@ input:focus { border-color: var(--blue-300); outline: 0; }
 select { border: 1px solid var(--grey-300); border-radius: 0.25rem; padding: 0.45rem; font-size: 1rem; }
 select.input-small { padding: 0.3rem; }
 select:focus { border-color: var(--blue-300); outline: none; }
+select {
+	-webkit-appearance: none;
+	background: url('data:image/svg+xml;utf8, <svg fill="none" viewBox="0 0 30 24" height="24" width="14" xmlns="http://www.w3.org/2000/svg"> <path xmlns="http://www.w3.org/2000/svg" d="M 0 8 L 10 18 L 20 8" stroke="%233d3d3d"></path> </svg> ') center right no-repeat;
+	padding-right: 20px;
+}
+
 
 .button {
   position: relative;
